# rules_bazel_integration_test_win_example

./: .bazelrc  BUILD.bazel  WORKSPACE  bazel_versions.bzl
workspace/: BUILD.bazel  simple_test.sh
